configured commection string

--- a/RaaMS/appsettings.json
+++ b/RaaMS/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
+  {
+    "ConnectionStrings": {
+      "RulesServiceConnection": "Data Source=localhost;Initial Catalog=RulesServices;Integrated Security=True"
+    }
+  },
   "AllowedHosts": "*"
 }
